--- a/css/main.css
+++ b/css/main.css
@@ -1,55 +1,4 @@
-:root {
-  /* включает цвет логотипа */
-  --link-active-color: #2196f3;
-
-  --logo-second-color: #000000;
-  --logo-secondfooter-color: #ffffff;
-  /* остальніе переменніе цвета */
-
-  --head-back-color: #ffffff;
-  --head-nav-color: #212121;
-  --head-mailtel-color: #757575;
-  --footer-back-color: #2f303a;
-  --adress-footer-color: #ffffff;
-  --footer-MailTel-color: rgba(255, 255, 255, 0.6);
-  --main-HEroback-color: #2f303a;
-  --main-HeroText-color: #ffffff;
-  --main-HeroButtonText-color: #ffffff;
-  --main-HeroButtonBack-color: rgba(33, 150, 243, 1);
-  --main-ButtonActive-color: rgb(13, 15, 17);
-  --main-Section1and2Back-color: #ffffff;
-  --H2-H3-Text-color: #212121;
-  --portfolio-Button_color: #212121;
-  --portfolio-ButtonActive-color: #ffffff;
-  --portfolio-BattonBack-color: rgba(33, 150, 243, 1);
-  --P-Text-color: #757575;
-  --Main-Section3Back-color: #f5f4fa;
-
-  /* Icons------------- */
-  --icons: #afb1b8;
-
-  /* time -cubik-background-----  ВРЕМЯ АНИМАЦИЙ---- */
-  --Cubik: cubic-bezier(0.4, 0, 0.2, 1);
-  --time-trans: 500ms;
-  --background-time: background-color 500ms;
-}
-
-/* основные настрйки */
-body {
-  font-family: "roboto", "raleway", "sans-serif";
-  color: red;
-}
-.section {
-  padding: 94px 0px 94px 0px;
-}
-
-.container {
-  width: 1200px;
-  padding: 0px 15px;
-  margin: 0 auto;
-}
- 
-
+@charset "UTF-8";
 p,
 h1,
 h2,
@@ -59,10 +8,12 @@ h5,
 h6 {
   margin: 0px;
 }
+
 ul {
   margin: 0px;
   padding-left: 0px;
 }
+
 .links {
   text-decoration: none;
 }
@@ -76,14 +27,30 @@ img {
   display: flex;
 }
 
-/* Голова----------------- */
+/* основные настрйки */
+body {
+  font-family: "roboto", "raleway", "sans-serif";
+  color: red;
+}
 
+.section {
+  padding: 94px 0px 94px 0px;
+}
+
+.container {
+  width: 1200px;
+  padding: 0px 15px;
+  margin: 0 auto;
+}
+
+/* Голова----------------- */
 .head {
   background-color: var(--head-back-color);
   border-bottom: 1px solid #ececec;
   max-width: 1600px;
   margin: 0 auto;
 }
+
 header .container {
   display: flex;
   align-items: center;
@@ -108,10 +75,12 @@ header .container {
   color: var(--logo-second-color);
   margin-right: 104px;
 }
+
 .logonavflex {
   display: flex;
   height: 80px;
 }
+
 .TextNAV::after {
   position: absolute;
   bottom: 0;
@@ -120,13 +89,14 @@ header .container {
   width: 100%;
   height: 4px;
   background-color: var(--link-active-color);
-
   display: none;
 }
+
 .TextNAV:hover::after,
 .TextNAV:focus::after {
   display: block;
 }
+
 .TextNAV {
   font-family: "Roboto";
   font-weight: 500;
@@ -137,17 +107,21 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+
 .TextNAV:hover,
 .TextNAV:focus {
   color: var(--link-active-color);
 }
+
 .pod4ekivanie {
   padding-top: 32px;
   position: relative;
 }
+
 .pod4ekivanie:not(:last-child) {
   margin-right: 54px;
 }
+
 .pod4ekivanie:last-child {
   margin-right: 280px;
 }
@@ -155,6 +129,7 @@ header .container {
 .otstup-top {
   padding-top: 32px;
 }
+
 .mit {
   text-decoration: none;
   font-family: "Roboto";
@@ -166,30 +141,33 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+
 .mit:hover,
 .mit:focus {
   color: var(--link-active-color);
 }
+
 .special-svg {
   fill: currentColor;
   margin-right: 10px;
   cursor: pointer;
 }
+
 .special-svg:hover {
   fill: var(--link-active-color);
 }
+
 .special-svg:focus {
   fill: var(--link-active-color);
 }
+
 .mailmargin {
   margin-right: 30px;
 }
 
 /* Ноги --------+ Backdrop-------------*/
-
 .foot {
   background-color: var(--footer-back-color);
-
   margin: 0 auto;
 }
 
@@ -210,6 +188,7 @@ header .container {
   letter-spacing: 0.03em;
   color: var(--logo-secondfooter-color);
 }
+
 .conFlex {
   display: flex;
 }
@@ -219,6 +198,7 @@ header .container {
   height: 80px;
   padding: 72px;
 }
+
 .unaited-h3 {
   font-family: "Roboto";
   width: 100%;
@@ -231,58 +211,55 @@ header .container {
   color: #fff;
   margin-bottom: 20px;
 }
+
 .united2 {
   width: 570px;
   height: 86px;
-
   margin-left: auto;
   margin-top: 72px;
 }
+
 .unaited2-1 {
   display: flex;
   position: absolute;
 }
+
 .modal-input-2 {
   width: 358px;
   height: 50px;
   background: #2f303a;
   padding-left: 16px;
   margin-right: 12px;
-
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 }
+
 .BTN-footer {
   background-color: #2196f3;
-
   width: 200px;
   height: 50px;
   color: #fff;
   cursor: pointer;
   padding: 10px 20px;
   display: inline-flex;
-
   font-family: "Roboto";
-
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-
   border-color: #2196f3;
   border-radius: 4px;
 }
+
 .BTN-footer::after {
   content: "";
   width: 24px;
   height: 24px;
   margin-left: 10px;
-
-  background-image: url("../images2/icon\ send.svg");
+  background-image: url("../images2/icon send.svg");
   background-size: contain;
 }
 
@@ -337,6 +314,7 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+
 .Adress:hover,
 .Adress:focus {
   color: var(--link-active-color);
@@ -353,13 +331,16 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+
 .MiT:hover,
 .MiT:focus {
   color: var(--link-active-color);
 }
+
 .teldown {
   padding-bottom: 60px;
 }
+
 /* backdrop ----------------------------------------------------------------*/
 .backdrop {
   position: fixed;
@@ -367,8 +348,7 @@ header .container {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -411,6 +391,7 @@ header .container {
   visibility: hidden;
   pointer-events: none;
 }
+
 /* FORM and MODAL -------------------------------------- */
 .modal-head {
   font-family: "Roboto";
@@ -419,7 +400,6 @@ header .container {
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
-
   color: #212121;
   margin: 40px 40px 0 40px;
 }
@@ -427,6 +407,7 @@ header .container {
 .form-input {
   padding: 0 30px;
 }
+
 .modal-nav {
   padding: 12px 40px 20px 40px;
 }
@@ -434,6 +415,7 @@ header .container {
 .modal-input-grup {
   margin-bottom: 10px;
 }
+
 .modal-nav-text {
   font-family: "Roboto";
   display: block;
@@ -441,17 +423,18 @@ header .container {
   font-size: 12px;
   line-height: 1.18;
   margin-bottom: 4px;
-
   letter-spacing: 0.01em;
-
-  color: rgba(117, 117, 117, 1);
+  color: rgb(117, 117, 117);
 }
+
 .modal-input:focus {
   border-color: #2196f3;
 }
+
 .modal-input:active {
   border-color: #2196f3;
 }
+
 .modal-input:hover {
   border-color: #2196f3;
 }
@@ -459,9 +442,7 @@ header .container {
 .modal-input {
   width: 100%;
   height: 40px;
-
   padding-left: 42px;
-
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: none;
@@ -469,12 +450,15 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+
 .modal-input:hover + svg {
   fill: #2196f3;
 }
+
 .modal-input:focus + svg {
   fill: #2196f3;
 }
+
 .modal-input-text {
   width: 100%;
   height: 120px;
@@ -489,21 +473,38 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-.modal-input-text:hover,
-.modal-input-text:focus,
-.modal-input-text:active {
+
+.modal-input-text:hover, .modal-input-text:focus, .modal-input-text:active {
   border-color: #2196f3;
 }
-.modal-input-text::placeholder-shown {
-  font-family: "Roboto";
 
+.modal-input-text::-moz-placeholder-shown {
+  font-family: "Roboto";
   font-weight: 400;
   font-size: 12px;
   line-height: 1.15;
   letter-spacing: 0.01em;
-
   color: rgba(117, 117, 117, 0.5);
 }
+
+.modal-input-text:-ms-input-placeholder-shown {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.15;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-input-text::placeholder-shown {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.15;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
 .position-icon {
   position: relative;
 }
@@ -519,23 +520,22 @@ header .container {
 .modal-comment-position {
   margin-bottom: 20px;
 }
+
 .position-chekbox {
   margin-left: 14px;
   cursor: pointer;
 }
+
 .color-politic {
   color: #2196f3;
 }
 
 .ok-agry {
   font-family: "Roboto";
-
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-
   letter-spacing: 0.03em;
-
   color: #757575;
 }
 
@@ -544,17 +544,13 @@ header .container {
   height: 50px;
   font-family: "Roboto";
   cursor: pointer;
-
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
   margin: 0 164px 0 164px;
-
   display: inline-block;
   align-items: center;
-
   letter-spacing: 0.06em;
-
   color: #ffffff;
   background: #2196f3;
   border-color: #2196f3;
@@ -570,11 +566,7 @@ header .container {
 
 .WS0 {
   background: var(--main-HEroback-color);
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.2),
-      rgba(47, 48, 58, 0.2)
-    ),
-    url("../images2/hero.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.2), rgba(47, 48, 58, 0.2)), url("../images2/hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -593,6 +585,7 @@ header .container {
   color: var(--main-HeroButtonText-color);
   padding: 106px 252px 0 252px;
 }
+
 .Hbutton {
   margin: 30px 485px 106px 485px;
   font-family: inherit;
@@ -610,6 +603,7 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+
 .Hbutton:hover,
 .Hbutton:focus {
   color: var(--main-ButtonActive-color);
@@ -618,7 +612,6 @@ header .container {
 /* section1------------------------- */
 /* WS1h3 - Webstudio Section 1 H3 */
 /* WS1P -wEBSTUDIO Section 1 P */
-
 .WS1 {
   background-color: var(--main-Section1and2Back-color);
 }
@@ -661,6 +654,7 @@ header .container {
 .WW {
   margin-right: 30px;
 }
+
 .LL {
   margin-left: auto;
 }
@@ -695,6 +689,7 @@ header .container {
 .sec2position {
   position: relative;
 }
+
 .sec2-text-in {
   position: absolute;
   bottom: 0;
@@ -714,7 +709,6 @@ header .container {
 /* WS3h2 - Webstudio section 3 h3 */
 /* WS3h3 - Webstudio section 3 h3 */
 /* WS3p Webstudio section 3 p*/
-
 .WS3 {
   background-color: var(--Main-Section3Back-color);
 }
@@ -756,9 +750,9 @@ header .container {
   color: var(--P-Text-color);
   margin-bottom: 16px;
 }
+
 .namesborder {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: #fff;
   padding-top: 30px;
@@ -779,6 +773,7 @@ header .container {
   width: 44px;
   height: 44px;
 }
+
 .barbers-soc-items:not(:last-child) {
   margin-right: 10px;
 }
@@ -799,16 +794,19 @@ header .container {
 .barbers-soc-link:focus {
   background-color: var(--link-active-color);
 }
+
 .barbers-soc-link:hover .barbers-soc-icon,
 .barbers-soc-link:focus .barbers-soc-icon {
   background-color: var(--link-active-color);
   fill: #fff;
 }
+
 .barbers-soc-icon {
   fill: #afb1b8;
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+
 /* SEction 4-------------------- */
 .WS4 {
   background-color: #fff;
@@ -824,9 +822,11 @@ header .container {
   color: var(--H2-H3-Text-color);
   margin-bottom: 50px;
 }
+
 .ULclients {
   justify-content: space-between;
 }
+
 .SVGclients {
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -836,9 +836,10 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+
 .SVGclients:hover,
 .SVGclients:focus {
-  border: 1px solid rgba(33, 150, 243, 1);
+  border: 1px solid rgb(33, 150, 243);
 }
 
 .Clients {
@@ -855,13 +856,13 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+
 .Clients:hover .Clients-svg,
 .Clients:focus .Clients-svg {
-  fill: rgba(33, 150, 243, 1);
+  fill: rgb(33, 150, 243);
 }
 
 /*Portfolio  ------------------------------------*/
-
 .btnP {
   font-family: "Roboto";
   font-weight: 500;
@@ -874,29 +875,30 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+
 .btnP:hover,
 .btnP:focus {
   color: var(--portfolio-ButtonActive-color);
   background-color: var(--portfolio-BattonBack-color);
 }
+
 .b1 {
   margin: 0 794px 0 327px;
   padding: 6px 22px;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   margin-right: 8px;
 }
+
 .b2 {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   margin-right: 8px;
   padding: 6px 22px;
 }
+
 .b3 {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   padding: 6px 22px;
 }
@@ -906,7 +908,6 @@ header .container {
 }
 
 /* section 2---------portfolio--------------------------------*/
-
 .PS2 {
   background-color: var(--main-Section1and2Back-color);
   max-width: 1600px;
@@ -924,14 +925,17 @@ header .container {
   border: 1px solid #eeeeee;
   padding: 20px;
 }
+
 .imgposition {
   position: relative;
   overflow: hidden;
 }
+
 .imgposition:hover .text-hidden,
 .imgposition:focus .text-hidden {
   transform: translateY(0);
 }
+
 .text-hidden {
   position: absolute;
   font-family: "Roboto";
@@ -943,7 +947,6 @@ header .container {
   background-color: rgba(33, 150, 243, 0.9);
   padding: 63px 24px;
   top: 0;
-
   transform: translateY(100%);
   transition: transform var(--time-trans) var(--Cubik);
 }
@@ -952,6 +955,7 @@ header .container {
   margin-bottom: 30px;
   margin-right: 30px;
 }
+
 .img2 {
   margin-right: 30px;
 }
@@ -973,3 +977,7 @@ header .container {
   letter-spacing: 0.03em;
   color: var(--P-Text-color);
 }
+
+body {
+  background-color: green;
+}/*# sourceMappingURL=main.css.map */
