--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -57,6 +57,7 @@
   .modal-input-2 {
     width: 358px;
     height: 50px;
+    color: #fff;
     background: #2f303a;
     padding-left: 16px;
     margin-right: 12px;
