--- a/css/styles.css
+++ b/css/styles.css
@@ -241,10 +241,12 @@ header .container {
 .unaited2-1 {
   display: flex;
   position: absolute;
+  
 }
 .modal-input-2 {
   width: 358px;
   height: 50px;
+  color: #fff;
   background: #2f303a;
   padding-left: 16px;
   margin-right: 12px;
