--- a/css/main.css
+++ b/css/main.css
@@ -108,28 +108,24 @@ header .container {
   margin-right: 104px;
 }
 
-.logonavflex {
+.navigation {
   display: flex;
   height: 80px;
 }
 
-.TextNAV::after {
-  position: absolute;
-  bottom: 0;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--link-active-color);
-  display: none;
+.navigation__list-string {
+  padding-top: 32px;
+  position: relative;
+}
+.navigation__list-string:not(:last-child) {
+  margin-right: 54px;
+}
+.navigation__list-string:last-child {
+  margin-right: 280px;
 }
 
-.TextNAV:hover::after,
-.TextNAV:focus::after {
-  display: block;
-}
-
-.TextNAV {
+.navigation__links {
+  text-decoration: none;
   font-family: "Roboto";
   font-weight: 500;
   font-size: 14px;
@@ -139,30 +135,28 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-
-.TextNAV:hover,
-.TextNAV:focus {
+.navigation__links:hover, .navigation__links:focus {
   color: var(--link-active-color);
 }
-
-.pod4ekivanie {
-  padding-top: 32px;
-  position: relative;
+.navigation__links::after {
+  position: absolute;
+  bottom: 0;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--link-active-color);
+  display: none;
 }
-
-.pod4ekivanie:not(:last-child) {
-  margin-right: 54px;
-}
-
-.pod4ekivanie:last-child {
-  margin-right: 280px;
+.navigation__links:hover::after, .navigation__links:focus::after {
+  display: block;
 }
 
 .otstup-top {
   padding-top: 32px;
 }
 
-.mit {
+.navigation__mail-tel {
   text-decoration: none;
   font-family: "Roboto";
   font-weight: 500;
@@ -173,23 +167,16 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-
-.mit:hover,
-.mit:focus {
+.navigation__mail-tel:hover, .navigation__mail-tel:focus {
   color: var(--link-active-color);
 }
 
-.special-svg {
+.navigation__special-svg {
   fill: currentColor;
   margin-right: 10px;
   cursor: pointer;
 }
-
-.special-svg:hover {
-  fill: var(--link-active-color);
-}
-
-.special-svg:focus {
+.navigation__special-svg:hover, .navigation__special-svg:focus {
   fill: var(--link-active-color);
 }
 
@@ -286,7 +273,6 @@ header .container {
   border-color: #2196f3;
   border-radius: 4px;
 }
-
 .BTN-footer::after {
   content: "";
   width: 24px;
@@ -310,7 +296,6 @@ header .container {
   width: 44px;
   height: 44px;
 }
-
 .footer-soc-items:not(:last-child) {
   margin-right: 10px;
 }
@@ -325,9 +310,7 @@ header .container {
   align-items: center;
   transition: var(--background-time);
 }
-
-.footer-soc-link:hover,
-.footer-soc-link:focus {
+.footer-soc-link:hover, .footer-soc-link:focus {
   background-color: var(--link-active-color);
 }
 
@@ -347,9 +330,7 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-
-.Adress:hover,
-.Adress:focus {
+.Adress:hover, .Adress:focus {
   color: var(--link-active-color);
 }
 
@@ -364,9 +345,7 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-
-.MiT:hover,
-.MiT:focus {
+.MiT:hover, .MiT:focus {
   color: var(--link-active-color);
 }
 
@@ -413,9 +392,7 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-
-.modal-close:hover,
-.modal-close:active {
+.modal-close:hover, .modal-close:active {
   fill: #2196f3;
 }
 
@@ -460,18 +437,6 @@ header .container {
   color: rgb(117, 117, 117);
 }
 
-.modal-input:focus {
-  border-color: #2196f3;
-}
-
-.modal-input:active {
-  border-color: #2196f3;
-}
-
-.modal-input:hover {
-  border-color: #2196f3;
-}
-
 .modal-input {
   width: 100%;
   height: 40px;
@@ -483,12 +448,10 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-
-.modal-input:hover + svg {
-  fill: #2196f3;
+.modal-input:focus, .modal-input:active, .modal-input:hover {
+  border-color: #2196f3;
 }
-
-.modal-input:focus + svg {
+.modal-input:hover + svg, .modal-input:focus + svg {
   fill: #2196f3;
 }
 
@@ -506,11 +469,9 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-
 .modal-input-text:hover, .modal-input-text:focus, .modal-input-text:active {
   border-color: #2196f3;
 }
-
 .modal-input-text::-moz-placeholder-shown {
   font-family: "Roboto";
   font-weight: 400;
@@ -519,7 +480,6 @@ header .container {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal-input-text:-ms-input-placeholder-shown {
   font-family: "Roboto";
   font-weight: 400;
@@ -528,7 +488,6 @@ header .container {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal-input-text::placeholder-shown {
   font-family: "Roboto";
   font-weight: 400;
@@ -607,7 +566,7 @@ header .container {
   margin: 0 auto;
 }
 
-.HERO {
+.section__HERO {
   font-family: "Roboto";
   font-weight: 900;
   font-size: 44px;
@@ -619,7 +578,7 @@ header .container {
   padding: 106px 252px 0 252px;
 }
 
-.Hbutton {
+.section__Hbutton {
   margin: 30px 485px 106px 485px;
   font-family: inherit;
   font-weight: 700;
@@ -636,9 +595,7 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-
-.Hbutton:hover,
-.Hbutton:focus {
+.section__Hbutton:hover, .section__Hbutton:focus {
   color: var(--main-ButtonActive-color);
 }
 
@@ -649,14 +606,14 @@ header .container {
   background-color: var(--main-Section1and2Back-color);
 }
 
-.specials {
+.section__specials {
   display: flex;
   justify-content: space-between;
   list-style: none;
   text-decoration: none;
 }
 
-.special-item {
+.section__item {
   width: 270px;
   height: 120px;
   background: #f5f4fa;
@@ -664,7 +621,7 @@ header .container {
   margin-bottom: 30px;
 }
 
-.special-links {
+.section__links {
   width: 100%;
   height: 100%;
   display: flex;
@@ -672,7 +629,7 @@ header .container {
   align-items: center;
 }
 
-.WS1h3 {
+.section__WS1h3 {
   font-family: "Roboto";
   font-weight: 700;
   font-size: 14px;
@@ -692,7 +649,7 @@ header .container {
   margin-left: auto;
 }
 
-.WS1P {
+.section__WS1P {
   font-family: "Roboto";
   font-weight: 400;
   font-size: 14px;
@@ -702,12 +659,17 @@ header .container {
   width: 270px;
 }
 
+.section__ulstyle {
+  list-style: none;
+  display: flex;
+}
+
 /* section 2 ----------------------------*/
 .WS2 {
   background-color: var(--main-Section1and2Back-color);
 }
 
-.WS2h2 {
+.section__WS2h2 {
   padding: 0 486px 0 486px;
   font-family: "Roboto";
   font-weight: 700;
@@ -738,6 +700,15 @@ header .container {
   padding: 27px 95px;
 }
 
+.section__WW {
+  margin-right: 30px;
+}
+
+.section__ulstyle {
+  list-style: none;
+  display: flex;
+}
+
 /* section 3------------------------------ */
 /* WS3h2 - Webstudio section 3 h3 */
 /* WS3h3 - Webstudio section 3 h3 */
@@ -746,7 +717,7 @@ header .container {
   background-color: var(--Main-Section3Back-color);
 }
 
-.WS3h2 {
+.section__WS3h2 {
   font-family: "Roboto";
   font-weight: 700;
   font-size: 36px;
@@ -758,11 +729,11 @@ header .container {
   padding: 0 450px 0 450px;
 }
 
-.imgworkers {
+.section__imgworkers {
   border-radius: 0px;
 }
 
-.WS3h3 {
+.section__WS3h3 {
   font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
@@ -773,7 +744,7 @@ header .container {
   margin-bottom: 10px;
 }
 
-.WS3p {
+.section__WS3p {
   font-family: "Roboto";
   font-weight: 400;
   font-size: 16px;
@@ -784,7 +755,7 @@ header .container {
   margin-bottom: 16px;
 }
 
-.namesborder {
+.section__namesborder {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: #fff;
@@ -792,7 +763,7 @@ header .container {
   padding-bottom: 30px;
 }
 
-.barbers-soc {
+.section__barbers-info {
   margin: auto;
   display: flex;
   width: 206px;
@@ -802,16 +773,15 @@ header .container {
   align-items: center;
 }
 
-.barbers-soc-items {
+.section__barbers-items {
   width: 44px;
   height: 44px;
 }
-
-.barbers-soc-items:not(:last-child) {
+.section__barbers-items:not(:last-child) {
   margin-right: 10px;
 }
 
-.barbers-soc-link {
+.section__barbers-link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -822,22 +792,27 @@ header .container {
   transition: var(--background-time);
   transition-timing-function: var(--Cubik);
 }
-
-.barbers-soc-link:hover,
-.barbers-soc-link:focus {
+.section__barbers-link:hover, .section__barbers-link:focus {
   background-color: var(--link-active-color);
 }
-
-.barbers-soc-link:hover .barbers-soc-icon,
-.barbers-soc-link:focus .barbers-soc-icon {
+.section__barbers-link:hover .barbers-soc-icon, .section__barbers-link:focus .barbers-soc-icon {
   background-color: var(--link-active-color);
   fill: #fff;
 }
 
-.barbers-soc-icon {
+.section__barbers-icon {
   fill: #afb1b8;
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
+}
+
+.section__WW {
+  margin-right: 30px;
+}
+
+.section__ulstyle {
+  list-style: none;
+  display: flex;
 }
 
 /* SEction 4-------------------- */
@@ -869,9 +844,7 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-
-.SVGclients:hover,
-.SVGclients:focus {
+.SVGclients:hover, .SVGclients:focus {
   border: 1px solid rgb(33, 150, 243);
 }
 
@@ -883,16 +856,14 @@ header .container {
   justify-content: center;
   align-items: center;
 }
+.Clients:hover .Clients-svg, .Clients:focus .Clients-svg {
+  fill: rgb(33, 150, 243);
+}
 
 .Clients-svg {
   fill: #afb1b8;
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
-}
-
-.Clients:hover .Clients-svg,
-.Clients:focus .Clients-svg {
-  fill: rgb(33, 150, 243);
 }
 
 /*Portfolio  ------------------------------------*/
@@ -908,9 +879,7 @@ header .container {
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
-
-.btnP:hover,
-.btnP:focus {
+.btnP:hover, .btnP:focus {
   color: var(--portfolio-ButtonActive-color);
   background-color: var(--portfolio-BattonBack-color);
 }
@@ -963,9 +932,7 @@ header .container {
   position: relative;
   overflow: hidden;
 }
-
-.imgposition:hover .text-hidden,
-.imgposition:focus .text-hidden {
+.imgposition:hover .text-hidden, .imgposition:focus .text-hidden {
   transform: translateY(0);
 }
 
@@ -1009,8 +976,4 @@ header .container {
   line-height: 1.875;
   letter-spacing: 0.03em;
   color: var(--P-Text-color);
-}
-
-body {
-  background-color: green;
 }/*# sourceMappingURL=main.css.map */
