--- a/sass/components/_section1-studio.scss
+++ b/sass/components/_section1-studio.scss
@@ -6,14 +6,14 @@
     background-color: var(--main-Section1and2Back-color);
   }
   
-  .specials {
+  .section__specials {
     display: flex;
     justify-content: space-between;
     list-style: none;
     text-decoration: none;
   }
   
-  .special-item {
+  .section__item {
     width: 270px;
     height: 120px;
     background: #f5f4fa;
@@ -21,7 +21,7 @@
     margin-bottom: 30px;
   }
   
-  .special-links {
+  .section__links {
     width: 100%;
     height: 100%;
     display: flex;
@@ -29,7 +29,7 @@
     align-items: center;
   }
   
-  .WS1h3 {
+  .section__WS1h3 {
     font-family: "Roboto";
     font-weight: 700;
     font-size: 14px;
@@ -48,7 +48,7 @@
     margin-left: auto;
   }
   
-  .WS1P {
+  .section__WS1P {
     font-family: "Roboto";
     font-weight: 400;
     font-size: 14px;
@@ -57,3 +57,5 @@
     color: var(--P-Text-color);
     width: 270px;
   }
+  .section__ulstyle { list-style: none;
+    display: flex;}
