--- a/sass/components/_section3-studio.scss
+++ b/sass/components/_section3-studio.scss
@@ -7,7 +7,7 @@
   background-color: var(--Main-Section3Back-color);
 }
 
-.WS3h2 {
+.section__WS3h2 {
   font-family: "Roboto";
   font-weight: 700;
   font-size: 36px;
@@ -19,11 +19,11 @@
   padding: 0 450px 0 450px;
 }
 
-.imgworkers {
+.section__imgworkers {
   border-radius: 0px;
 }
 
-.WS3h3 {
+.section__WS3h3 {
   font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
@@ -34,7 +34,7 @@
   margin-bottom: 10px;
 }
 
-.WS3p {
+.section__WS3p {
   font-family: "Roboto";
   font-weight: 400;
   font-size: 16px;
@@ -44,7 +44,7 @@
   color: var(--P-Text-color);
   margin-bottom: 16px;
 }
-.namesborder {
+.section__namesborder {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -53,7 +53,7 @@
   padding-bottom: 30px;
 }
 
-.barbers-soc {
+.section__barbers-info {
   margin: auto;
   display: flex;
   width: 206px;
@@ -63,15 +63,16 @@
   align-items: center;
 }
 
-.barbers-soc-items {
+.section__barbers-items {
   width: 44px;
   height: 44px;
-}
-.barbers-soc-items:not(:last-child) {
-  margin-right: 10px;
+
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 
-.barbers-soc-link {
+.section__barbers-link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -81,19 +82,25 @@
   align-items: center;
   transition: var(--background-time);
   transition-timing-function: var(--Cubik);
+
+  &:hover,
+  &:focus {
+    background-color: var(--link-active-color);
+  }
+  &:hover .barbers-soc-icon,
+  &:focus .barbers-soc-icon {
+    background-color: var(--link-active-color);
+    fill: #fff;
+  }
 }
 
-.barbers-soc-link:hover,
-.barbers-soc-link:focus {
-  background-color: var(--link-active-color);
-}
-.barbers-soc-link:hover .barbers-soc-icon,
-.barbers-soc-link:focus .barbers-soc-icon {
-  background-color: var(--link-active-color);
-  fill: #fff;
-}
-.barbers-soc-icon {
+.section__barbers-icon {
   fill: #afb1b8;
   transition: var(--time-trans);
   transition-timing-function: var(--Cubik);
 }
+.section__WW {
+  margin-right: 30px;
+}
+.section__ulstyle { list-style: none;
+  display: flex;}
